# st_dashboard

./: .gitignore  README.md  pyproject.toml
check-similarity/: README.md  app.py
check-similarity/.streamlit/: config.toml
dashboard/: README.md  app.py  app_test.py  config.py  context.py  state.py  zzz_app.py
dashboard/adapters/: __init__.py  vector_db_adapter.py
dashboard/assets/: components.css  custom.css  styles.css  tabs.css  utilities.css
dashboard/backend/: __init__.py  search.py
dashboard/backend/results/: __init__.py  base.py  concrete.py
dashboard/callbacks/: __init__.py  details.py  map.py  search.py  ui.py
dashboard/components/: README.md  dashboard.py  helpers.py  map.py  map_component.py  search.py  search_form.py
dashboard/components/details/: __init__.py  base_modality_viewer.py  details_panel.py  details_utils.py  document_viewer.py  image_viewer.py  project_viewer.py  stats_viewer.py
dashboard/components/map/: __init__.py  map.py  map_utils.py
dashboard/components/results/: __init__.py  results_card_base.py  results_cards.py  results_panel.py  results_state_card.py
dashboard/components/search_form/: __init__.py  base_search_form.py  change_description_search_form.py  change_discription_search_form.py  change_search_form.py  change_similarity_search_form.py  dissimilarity_search_form.py  dissimilarity_state_search_form.py  image_change_search_form.py  image_state_search_form.py  registry.py  similarity_change_search_form.py  state_description_search_form.py  state_dissimilarity_search_form.py  state_search_form.py  state_similarity_search_form.py  text_change_search_form.py  text_state_search_form.py  utils.py
dashboard/frontend/: __init__.py  layout.py  layout_v2.py  zzz_layout_v2.py
dashboard/frontend/components/: __init__.py  base.py  dashboard.py  details.py  details_module.py  helpers.py  resultcard.py  results.py  search_bar.py  search_form.py  search_module.py  zzz_search_bar.py  zzz_search_module.py
dashboard/frontend/components/details/: details_panel.py  document_viewer.py  project_viewer.py  stats_viewer.py
dashboard/frontend/components/results/: results_card_base.py  results_cards.py  results_panel.py  results_state_card.py
dashboard/frontend/tabs/: __init__.py  change.py  details.py  image_to_image_state.py  location.py  stats.py  text.py
dashboard/utils/: __init__.py  display.py  document_cache.py  encoder_manager.py  encoding.py  enrichment.py  map_utils.py
reference/: EXTRACTION_COMPLETE.md  UI_REDESIGN.md  setup_db_README.md  todo.md
scripts/: build_faiss_indexes.py  compute_whitening.py  diagnose_whitening.py  generate_embeddings.py
src/streettransformer/: README.md  __init__.py  clip_encoding.py  config.py  database.py  embedding_db.py  npz_cache.py  utils.py  whitening.py
src/streettransformer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/streettransformer/db/: __init__.py  database.py  embedding_db.py  faiss_index.py  npz_cache.py  whitening.py
src/streettransformer/image_retrieval/: README.md  __init__.py  blip_embeddings.py  change_query.py  clip_embeddings.py  compute_whiten_stats.py  faiss_index.py  npz_cache.py  pipeline.py  query.py  query_rerank.py  requirements.txt  utils.py  utils_loc.py  vector_db.py  whitening.py
src/streettransformer/new_query/: ReadMe.md  query.py  vector_db.py
src/streettransformer/query/: __init__.py  base.py  base_query.py  clip_embedding.py  metadata.py  mixins.py  queries.py  results_instances.py  results_sets.py
src/streettransformer/query/queries/: __init__.py  ask.py  change_description_query.py  change_similarity_image_query.py  results_instances.py  results_sets.py  state_description_query.py  state_dissimilarity_image_query.py  state_similarity_image_query.py
tests/: test_basic.py  test_refactor.py
